# capstone-project

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  PROTOTYPE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 554efd373264_initial_extraction_logs_table.py  934e52b9a9b3_add_api_call_logs_table.py  a1b2c3d4e5f6_add_parser_configs.py  b2c3d4e5f6a7_generic_extraction_fields.py  c3d4e5f6a7b8_backfill_parser_config_id.py  d4e5f6a7b8c9_add_ab_testing_columns.py  e5f6a7b8c9d0_rename_parser_to_extractor.py  f6a7b8c9d0e1_update_default_prompt_clabe_spaces.py  g7b8c9d0e1f2_rename_is_bank_statement_to_is_valid_document.py  h8c9d0e1f2a3_add_status_and_test_extraction_logs.py  i9d0e1f2a3b4_add_users_and_multi_tenancy.py  j0e1f2a3b4c5_add_api_tokens.py  k1f2a3b4c5d6_add_ai_usage_logs.py  l2g3h4i5j6k7_add_privacy_security_tables.py  m3h4i5j6k7l8_change_user_role_default_to_guest.py  n4i5j6k7l8m9_add_default_receipt_extractor.py  o5p6q7r8s9t0_deduplicate_default_extractors.py  p6q7r8s9t0u1_backfill_receipt_extractor.py  q7r8s9t0u1v2_migrate_to_uuid_pks.py  r8s9t0u1v2w3_add_postprocessor_column.py  s9t0u1v2w3x4_update_bank_statement_prompt.py
backend/application/: database.py  main.py
backend/application/tests/: test_data_cleaner.py
backend/config/: extraction_config.yaml
backend/scripts/: README.md  debug_extraction.py  process_accounts.py  run_api.py  run_experiment.py  run_extraction.py  upload_bank_accounts.py  validate_extraction.py
backend/src/: constants.py  main.py
backend/src/application/: database.py  main.py
backend/src/core/: file_utils.py  logger.py
backend/src/domain/: banks.py  constants.py  entities.py  extractor_interface.py  parser_interface.py  schemas.py  validators.py
backend/src/extraction/: base_parser.py  claude_ocr_parser.py  (+9 more)
backend/tests/: test_file_validator.py
(+237 files in other folders)
